fixed alignment issues in dashboard components

--- a/mycoldlogic/src/components/Nav/Nav.css
+++ b/mycoldlogic/src/components/Nav/Nav.css
@@ -1,11 +1,9 @@
 .Nav{
   align-self: center;
-  margin-right: 100px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-row-gap: 50px;
-  grid-column-gap: 80px;
 }
 /* smart watches (just in case) */
 @media screen and (min-device-width: 150px)and (max-width: 330px){
