--- a/mycoldlogic/src/containers/Dashboard/AskManagerForm/AskManagerForm.css
+++ b/mycoldlogic/src/containers/Dashboard/AskManagerForm/AskManagerForm.css
@@ -1,9 +1,5 @@
 .AskManagerForm{
-  position: absolute;
-    right: 0;
-width: 22vmax;
-  height: 85%;
-  padding: 20% 8% 2% 2%;
+  padding: 5px;
 }
 .AskManagerForm h3{
   text-align: center;
@@ -25,25 +21,23 @@ width: 22vmax;
     width: 100%;
 }
 .AskManagerForm form select{
-text-align: center;
-    font-size: large;
-  width: 88%;
-  margin: 15px auto;
+  text-align: center;
+  font-size: large;
+  margin: 15px 0;
+  width: 100%;
   background: #FFFFFF;
   border: none;
   border-bottom: 1px solid #0D3C55;
   border-radius: 2px;
 }
 .AskManagerForm input{
-    width: 100%;
   padding: 5px 3px 5px 0;
-  margin: 10px 0 10px 0px;
+  margin: 10px 5px;
   border: none;
   border-bottom: 2px solid #0D3C55;
 }
 .AskManagerForm textarea{
-  width: 100%;
-  margin: 2vmax auto;
+  margin: 2vmax 0;
   border-radius: 15px;
 }
 .AskManagerForm textarea:read-write,.AskManagerForm textarea:placeholder-shown {
